Closed Bug 200162 Opened 23 years ago Closed 22 years ago

semaerr and semaping fail on some HP-UX 11.00 machines

Categories

(NSPR :: NSPR, defect)

4.1.2
HP
HP-UX
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

References

Details

Attachments

(1 file)

The 32-bit HP-UX PA-RISC builds (both debug and optimized) of semaerr and semaping fail on some HP-UX 11.00 machines, for example, sorrento and salerno at Netscape and charm at Sun. This problem is in NSPR as early as 4.1.2. In NSPR 4.3, the test output looks like this: BEGIN TEST: semaerr Thu Mar 27 11:53:31 PST 2003 OBJDIR HP-UXB.11.00_DBG.OBJ LIBS /share/builds/mccrel3/nspr/nspr43/builds/20030327.1/smarch_HPUX11.00/hpux32_dbg/dist/lib Expected error is -5950 but got (-5987, 22) semaerr returned 1 (failed) END TEST: semaerr BEGIN TEST: semaping Thu Mar 27 11:53:31 PST 2003 OBJDIR HP-UXB.11.00_DBG.OBJ LIBS /share/builds/mccrel3/nspr/nspr43/builds/20030327.1/smarch_HPUX11.00/hpux32_dbg/dist/lib PR_OpenSemaphore failed (-5987, 22) Killing semaping 8962 after 600 kill: 8963: The specified process does not exist. semaping returned 143 (failed) END TEST: semaping
Attached patch Proposed patchSplinter Review
HP tracked down the cause of these test failures. It is a bug in sem_open: sem_open still reads the third and fourth arguments when the O_CREAT flag is not specified. We can work around this by passing 0 as the third and fourth arguments to sem_open in that case.
Fix checked into the NSPR tip (NSPR 4.5) and the NSPRPUB_PRE_4_2_CLIENT_BRANCH (Mozilla 1.7 beta).
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.5
*** Bug 226763 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: