Bugzilla bug 200162: pass 0 as the third and fourth arguments to sem_open to work around a bug in sem_open on HP-UX 11.23 or earlier.  The patch is contributed by Grace Lu of HP.  r=wtc.